--- a/package.json
+++ b/package.json
@@ -3,44 +3,42 @@
     "sideEffects": false,
     "type": "module",
     "prisma": {
-        "seed": "node --loader tsx prisma/seed.ts"
+        "seed": "tsx prisma/seed.ts"
     },
     "scripts": {
-        "dev": "npm-run-all build --parallel \"dev:*\"",
-        "dev:node": "cross-env NODE_ENV=development node --loader tsx --watch --require dotenv/config ./server.ts",
-        "dev:remix": "remix dev",
+        "dev": "remix dev --no-restart -c 'tsx server.ts'",
         "build": "remix build",
-        "start": "cross-env NODE_ENV=production node --loader tsx ./server.ts",
+        "start": "cross-env NODE_ENV=production tsx server.ts",
+        "format": "prettier --write .",
+        "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
         "typecheck": "tsc"
     },
     "dependencies": {
         "@fastify/send": "^2.1.0",
         "@mcansh/remix-raw-http": "^0.2.1",
         "@prisma/client": "^4.13.0",
-        "@remix-run/node": "^1.15.0",
-        "@remix-run/react": "^1.15.0",
-        "compression": "^1.7.4",
+        "@remix-run/node": "^1.16.0",
+        "@remix-run/react": "^1.16.0",
         "cross-env": "^7.0.3",
-        "isbot": "^3.6.5",
+        "isbot": "^3.6.10",
         "match-sorter": "^6.3.1",
-        "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sort-by": "^1.2.0"
     },
     "devDependencies": {
-        "@remix-run/dev": "^1.15.0",
-        "@remix-run/eslint-config": "^1.15.0",
-        "@types/node": "^18.16.0",
-        "@types/react": "^18.0.25",
-        "@types/react-dom": "^18.0.8",
+        "@remix-run/dev": "^1.16.0",
+        "@remix-run/eslint-config": "^1.16.0",
+        "@types/node": "^18.16.5",
+        "@types/react": "^18.2.6",
+        "@types/react-dom": "^18.2.4",
         "@types/sort-by": "^1.2.0",
+        "chokidar": "^3.5.3",
         "dotenv": "^16.0.3",
-        "eslint": "^8.27.0",
-        "npm-run-all": "^4.1.5",
+        "eslint": "^8.40.0",
         "prisma": "^4.13.0",
-        "tsx": "^3.12.6",
-        "typescript": "^5.0.0"
+        "tsx": "^3.12.7",
+        "typescript": "^5.0.4"
     },
     "engines": {
         "node": ">=18"
