--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "esModuleInterop": true,
         "jsx": "react-jsx",
         "moduleResolution": "bundler",
+        "module": "ESNext",
         "resolveJsonModule": true,
         "target": "ESNext",
         "strict": true,
