--- a/apps/contacts/package.json
+++ b/apps/contacts/package.json
@@ -6,8 +6,8 @@
         "seed": "tsx prisma/seed.ts"
     },
     "scripts": {
-        "dev": "remix dev",
-        "build": "remix build",
+        "dev": "vite",
+        "build": "vite build && vite build --ssr",
         "start": "remix-serve ./build/index.js",
         "format": "prettier --write .",
         "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -15,9 +15,9 @@
     },
     "dependencies": {
         "@prisma/client": "^4.13.0",
-        "@remix-run/node": "2.1.0",
-        "@remix-run/react": "2.1.0",
-        "@remix-run/serve": "^2.1.0",
+        "@remix-run/node": "0.0.0-experimental-9149cd0fe",
+        "@remix-run/react": "0.0.0-experimental-9149cd0fe",
+        "@remix-run/serve": "0.0.0-experimental-9149cd0fe",
         "isbot": "^3.6.10",
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
@@ -25,8 +25,8 @@
         "sort-by": "^1.2.0"
     },
     "devDependencies": {
-        "@remix-run/dev": "2.1.0",
-        "@remix-run/eslint-config": "2.1.0",
+        "@remix-run/dev": "0.0.0-experimental-9149cd0fe",
+        "@remix-run/eslint-config": "0.0.0-experimental-9149cd0fe",
         "@types/node": "^18.16.5",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
@@ -34,7 +34,9 @@
         "eslint": "^8.51.0",
         "prisma": "^5.4.2",
         "tsx": "^3.14.0",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "vite": "^4.5.0",
+        "vite-tsconfig-paths": "^4.2.1"
     },
     "prettier": {
         "printWidth": 100,
