--- a/apps/contacts/package.json
+++ b/apps/contacts/package.json
@@ -15,9 +15,9 @@
     },
     "dependencies": {
         "@prisma/client": "^4.13.0",
-        "@remix-run/node": "2.1.0",
-        "@remix-run/react": "2.1.0",
-        "@remix-run/serve": "^2.1.0",
+        "@remix-run/node": "2.2.0",
+        "@remix-run/react": "2.2.0",
+        "@remix-run/serve": "2.2.0",
         "isbot": "^3.6.10",
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
@@ -25,8 +25,8 @@
         "sort-by": "^1.2.0"
     },
     "devDependencies": {
-        "@remix-run/dev": "2.1.0",
-        "@remix-run/eslint-config": "2.1.0",
+        "@remix-run/dev": "2.2.0",
+        "@remix-run/eslint-config": "2.2.0",
         "@types/node": "^18.16.5",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
