--- a/apps/contacts/package.json
+++ b/apps/contacts/package.json
@@ -2,44 +2,42 @@
     "private": true,
     "sideEffects": false,
     "type": "module",
-    "prisma": {
-        "seed": "tsx prisma/seed.ts"
-    },
     "scripts": {
-        "dev": "remix dev",
-        "build": "remix build",
-        "start": "remix-serve ./build/index.js",
-        "format": "prettier --write .",
-        "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-        "typecheck": "tsc"
+        "dev": "react-router dev",
+        "build": "react-router build",
+        "fmt": "biome format --write .",
+        "lint": "biome lint --write .",
+        "typecheck": "react-router typegen && tsc",
+        "start": "react-router-serve ./build/server/index.js",
+        "db:gui": "drizzle-kit studio",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate"
     },
     "dependencies": {
-        "@prisma/client": "^4.13.0",
-        "@remix-run/node": "2.2.0",
-        "@remix-run/react": "2.2.0",
-        "@remix-run/serve": "2.2.0",
-        "isbot": "^3.6.10",
-        "match-sorter": "^6.3.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "sort-by": "^1.2.0"
+        "@react-router/fs-routes": "^7.4.0",
+        "@react-router/node": "^7.4.0",
+        "better-sqlite3": "^11.9.1",
+        "drizzle-kit": "^0.30.6",
+        "drizzle-orm": "^0.41.0",
+        "isbot": "^5.1.25",
+        "match-sorter": "^8.0.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router": "^7.4.0",
+        "sort-by": "^1.2.0",
+        "tiny-invariant": "^1.3.3"
     },
     "devDependencies": {
-        "@remix-run/dev": "2.2.0",
-        "@remix-run/eslint-config": "2.2.0",
-        "@types/node": "^18.16.5",
-        "@types/react": "^18.2.6",
-        "@types/react-dom": "^18.2.4",
-        "@types/sort-by": "^1.2.0",
-        "eslint": "^8.51.0",
-        "prisma": "^5.4.2",
-        "tsx": "^3.14.0",
-        "typescript": "^5.2.2"
-    },
-    "prettier": {
-        "printWidth": 100,
-        "tabWidth": 4,
-        "semi": false,
-        "arrowParens": "avoid"
+        "@biomejs/biome": "^1.9.4",
+        "@react-router/dev": "^7.4.0",
+        "@types/better-sqlite3": "^7.6.12",
+        "@types/node": "^22.13.14",
+        "@types/react": "^19.0.12",
+        "@types/react-dom": "^19.0.4",
+        "@types/sort-by": "^1.2.3",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.2",
+        "vite": "^6.2.3",
+        "vite-tsconfig-paths": "^5.1.4"
     }
 }
