--- a/apps/contacts/biome.jsonc
+++ b/apps/contacts/biome.jsonc
@@ -7,6 +7,7 @@
     },
     "formatter": {
         "enabled": true,
+        "ignore": [".react-router/types/**/*", "build"],
 
         "indentWidth": 4,
         "lineWidth": 100,
@@ -29,10 +30,12 @@
         }
     },
     "organizeImports": {
-        "enabled": true
+        "enabled": true,
+        "ignore": [".react-router/types/**/*", "build"]
     },
     "linter": {
         "enabled": true,
+        "ignore": [".react-router/types/**/*", "build"],
         "rules": {
             "recommended": true,
             "correctness": {
@@ -113,6 +116,7 @@
             "source": {
                 "sortJsxProps": "on"
             }
-        }
+        },
+        "ignore": [".react-router/types/**/*", "build"]
     }
 }
