--- a/apps/contacts/package.json
+++ b/apps/contacts/package.json
@@ -39,5 +39,8 @@
         "typescript": "^5.8.2",
         "vite": "^6.2.3",
         "vite-tsconfig-paths": "^5.1.4"
+    },
+    "volta": {
+        "node": "22.14.0"
     }
 }
